--- a/package.json
+++ b/package.json
@@ -6,21 +6,29 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/blob-stream": "^0.1.29",
+    "@types/file-saver": "^2.0.1",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.39",
+    "@types/pdfkit": "^0.10.5",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/vexflow": "^1.2.34",
+    "blob-stream": "^0.1.3",
+    "brfs": "^2.0.2",
+    "file-saver": "^2.0.2",
+    "pdfkit": "^0.11.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "svg-to-pdfkit": "^0.1.8",
     "typescript": "^3.7.5",
     "vexflow": "^3.0.9"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -37,5 +45,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "raw-loader": "^4.0.1",
+    "react-app-rewired": "^2.1.6",
+    "transform-loader": "^0.2.4"
   }
 }
