--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/blob-stream": "^0.1.29",
     "@types/file-saver": "^2.0.1",
     "@types/jest": "^24.9.1",
+    "@types/lodash": "^4.14.150",
     "@types/node": "^12.12.39",
     "@types/pdfkit": "^0.10.5",
     "@types/react": "^16.9.35",
@@ -17,6 +18,7 @@
     "blob-stream": "^0.1.3",
     "brfs": "^2.0.2",
     "file-saver": "^2.0.2",
+    "lodash": "^4.17.15",
     "pdfkit": "^0.11.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
