--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react-scripts": "3.4.1",
     "svg-to-pdfkit": "^0.1.8",
     "typescript": "^3.7.5",
-    "vexflow": "^3.0.9"
+    "vexflow": "^3.0.9",
+    "webpack-bundle-analyzer": "^3.7.0"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
@@ -51,6 +53,7 @@
   "devDependencies": {
     "raw-loader": "^4.0.1",
     "react-app-rewired": "^2.1.6",
+    "source-map-explorer": "^2.4.2",
     "transform-loader": "^0.2.4"
   }
 }
